# services

./: README
MODBUS/: CMakeLists.txt  modbus.vcxproj  modbus.vcxproj.filters
MODBUS/modbus.xcodeproj/: project.pbxproj
MODBUS/src/: CMakeLists.txt  modbus.cpp
VDEV/: CMakeLists.txt  README
VDEV/src/: CMakeLists.txt  VDEVservice.cpp
http/: CMakeLists.txt  http.sln  http.vcxproj  http.vcxproj.filters
http/http.xcodeproj/: project.pbxproj
http/src/: CMakeLists.txt  http.cpp
mDNS/: CMakeLists.txt  mDNS.sln  mDNS.vcxproj  mDNS.vcxproj.filters
mDNS/mDNS.xcodeproj/: project.pbxproj
mDNS/src/: CMakeLists.txt  mDNS.cpp
webapp/: CMakeLists.txt  webapp.vcxproj
webapp/src/: CMakeLists.txt  webapp.cpp
webapp/webapp.xcodeproj/: project.pbxproj
xml/: CMakeLists.txt  xml.sln  xml.vcxproj  xml.vcxproj.filters
xml/expat-2.1.0/lib/: expat.vcxproj
xml/src/: CMakeLists.txt  serialization.h  xmlservice.cpp
xml/xml.xcodeproj/: project.pbxproj
